fix: gap in checkbox-buttons mixin

--- a/src/partials/components/checkbox-buttons/checkbox-buttons.scss
+++ b/src/partials/components/checkbox-buttons/checkbox-buttons.scss
@@ -8,6 +8,6 @@
   &__wrap {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 3px;
   }
 }
